fix spacing issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -105,3 +105,7 @@ input::placeholder {
     font-family: inherit;
     margin-bottom: 10px;
 }
+
+h1, h2, h3, p {
+    margin: 1rem 0 !important;
+}
